--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  The Queen is dead.
 </p>
 <p>
-  Sean made a change
+  Long live the King!
 </p>
 
 </body>
