--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   Long live the King!
 </p>
 <p>
-  Last updated on GitHub at 1200 on 16.09.22
+  Last updated on GitHub at 1200 on 16.09.22 and again at 1308
 </p>
 
 </body>
