--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 <p>
   Last updated on GitHub at 1200 on 16.09.22 and again at 1308
 </p>
+<p>
+  Updated by AWS at 1500 on 16.09.22
+</p>
 
 </body>
 </html>
