--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   Long live the King!
 </p>
 <p>
-  Last updated on GitHub at 1200 on 16.09.22 and again at 1308
+  Updated via GitHub.
 </p>
 <p>
-  Updated by AWS at 2014 on 16.09.22
+  Updated by AWS at 1900 on 18.09.22
 </p>
 
 </body>
