modified:   index.html

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
 
 <p>
-  The Queen is dead.
+  Greetings from DevOps!
 </p>
 <p>
-  Long live the King!
+
 </p>
 <p>
   Updated via GitHub.
 </p>
 <p>
-  Updated by AWS at 2052 on 19.09.22
+  Updated by AWS at 1958 on 20.09.22
 </p>
 
 </body>
